[feature][lib][storage] Update FileHelper and StorageWriterUtil to use modern Java features and improve code readability